force-app/main/default/objects/DuplicateRecordItem/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <description>Creator of the duplicate record, not the DRS</description>
    <label>Record Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>