force-app/main/default/objects/DuplicateRecordItem/fields/Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Name__c</fullName>
    <label>Record Created By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>