force-app/main/default/objects/DuplicateRecordItem/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>Created date of the duplicate record (not the DRS)</description>
    <label>Record Created Date</label>
    <type>DateTime</type>
</CustomField>