force-app/main/default/objects/DuplicateRecordItem/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
	<length>255</length>
	<type>Text</type>
</CustomField>